@@ -6,50 +6,42 @@ import com.example.umc9th.domain.review.entity.Review;
 import com.example.umc9th.domain.review.entity.ReviewImage;
 import com.example.umc9th.domain.store.entity.Store;
 import com.example.umc9th.domain.user.entity.User;
+import org.springframework.data.domain.Page;
 
+import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ReviewConverter {
 
     public static Review toReview(User user, Store store, ReviewReqDTO.CreateReview dto) {
-        Review review = Review.builder()
+        return Review.builder()
                 .user(user)
                 .store(store)
                 .rate(dto.getRate())
                 .content(dto.getContent())
                 .build();
-
-        List<ReviewImage> images = dto.getImages().stream()
-                .map(url -> ReviewImage.builder()
-                        .review(review)
-                        .url(url)
-                        .build())
-                .collect(Collectors.toList());
-
-        review.getReviewImageList().addAll(images);
-
-        return review;
     }
 
-    public static ReviewResDTO.ReviewDetail toReviewDto(Review review) {
-        return ReviewResDTO.ReviewDetail.builder()
-                .reviewId(review.getId())
+    public static ReviewResDTO.ReviewPreview toReviewPreviewDto(Review review) {
+        return ReviewResDTO.ReviewPreview.builder()
                 .userName(review.getUser().getName())
-                .storeName(review.getStore().getName())
                 .content(review.getContent())
                 .rate(review.getRate())
-                .createdAt(review.getCreatedAt())
-                .images(review.getReviewImageList().stream()
-                        .map(ReviewImage::getUrl).collect(Collectors.toList()))
+                .createdAt(LocalDate.from(review.getCreatedAt()))
                 .build();
     }
 
-    public static ReviewResDTO.ReviewList toReviewListDto(List<Review> reviews) {
-        return ReviewResDTO.ReviewList.builder()
-                .reviews(reviews.stream()
-                                .map(ReviewConverter::toReviewDto).collect(Collectors.toList()))
+    public static ReviewResDTO.ReviewPreviewList toReviewPreviewListDto(Page<Review> reviews) {
+        return ReviewResDTO.ReviewPreviewList.builder()
+                .reviews(reviews.getContent().stream()
+                        .map(ReviewConverter::toReviewPreviewDto)
+                        .toList()
+                )
+                .listSize(reviews.getSize())
+                .totalPage(reviews.getTotalPages())
+                .totalElements(reviews.getTotalElements())
+                .isFirst(reviews.isFirst())
+                .isLast(reviews.isLast())
                 .build();
-
     }
 }
